# libmicrodnf

./: .gitignore  CMakeLists.txt  VERSION.cmake
examples/: CMakeLists.txt  example.c
plugins/: CMakeLists.txt  repo-aptrpm.c
src/: CMakeLists.txt  init.c  libmicrodnf-plugin.h  libmicrodnf.h  libmicrodnf.ver  libmicrodnfP.h  loader.c  plugin.c  repo.c
